--- a/index.html
+++ b/index.html
@@ -48,11 +48,39 @@
                     </div>
                 </div>
 
-                <div class="control-group">
-                    <label for="logoInput" style="cursor:not-allowed; color: #94a3b8; font-size: 0.8rem;">📂 Chọn Logo
-                        (Admin only)</label>
-                    <input type="file" id="logoInput" accept="image/*" style="display: none;" disabled>
+                <!-- GitHub Cloud Config (Hidden by default) -->
+                <div id="githubPanel"
+                    style="display:none; padding: 0.5rem; background: #e0f2fe; border-radius: 6px; margin-bottom: 1rem; border: 1px solid #7dd3fc;">
+                    <label
+                        style="font-weight:bold; font-size:0.8rem; color:#0369a1; display:block; margin-bottom:5px;">☁️
+                        Đồng bộ GitHub (Cloud)</label>
+
+                    <input type="password" id="ghToken" placeholder="GitHub Token (PAT)..."
+                        style="width:100%; margin-bottom:5px; padding:4px; border:1px solid #ccc; border-radius:4px; font-size:0.8rem;">
+
+                    <div style="display:flex; gap:5px; margin-bottom:5px;">
+                        <input type="text" id="ghOwner" placeholder="User/Org"
+                            style="flex:1; padding:4px; border:1px solid #ccc; border-radius:4px; font-size:0.8rem;">
+                        <input type="text" id="ghRepo" placeholder="Repo Name"
+                            style="flex:1; padding:4px; border:1px solid #ccc; border-radius:4px; font-size:0.8rem;">
+                    </div>
+
+                    <input type="text" id="ghPath" value="data.json" placeholder="File path (e.g. data.json)"
+                        style="width:100%; margin-bottom:5px; padding:4px; border:1px solid #ccc; border-radius:4px; font-size:0.8rem;">
+
+                    <div style="display:flex; gap:5px;">
+                        <button id="ghSaveConfigBtn"
+                            style="flex:1; padding:4px; background:#0284c7; color:white; border:none; border-radius:4px; cursor:pointer; font-size:0.8rem;">Lưu
+                            Cấu Hình</button>
+                        <button id="ghSyncBtn"
+                            style="flex:1; padding:4px; background:#16a34a; color:white; border:none; border-radius:4px; cursor:pointer; font-size:0.8rem;">Đồng
+                            bộ Ngay</button>
+                    </div>
+                    <div id="ghStatus" style="font-size:0.7rem; color:#64748b; margin-top:5px; font-style:italic;">Chưa
+                        cấu hình</div>
                 </div>
+
+
 
                 <div class="control-group">
                     <label for="startDate">Ngày Bắt Đầu Chu Kỳ</label>
@@ -82,19 +110,19 @@
 
                 <button id="todayBtn" class="secondary-btn">Về Tháng Hiện Tại</button>
 
-                <div class="credits">
-                    Phát triển bởi<br>
-                    <span>Tân Nguyễn</span>
-                    <a href="https://zalo.me/0367287102" target="_blank" class="zalo-btn">
-                        <!-- Zalo SVG Icon -->
-                        <svg class="zalo-icon" viewBox="0 0 50 50" width="24" height="24">
-                            <path fill="#0068FF"
-                                d="M25,2C12.317,2,2,10.655,2,21.328c0,4.37,1.727,8.42,4.686,11.605 c0.355,0.383,0.334,1.066-0.198,1.641l-2.071,2.234c-0.862,0.931-0.204,2.44,1.055,2.44h0.625c4.721,0,8.749-1.921,11.536-4.945 c2.253,0.672,4.689,1.025,7.368,1.025c12.683,0,23-8.655,23-19.328S37.683,2,25,2z" />
-                            <text x="50%" y="55%" dominant-baseline="middle" text-anchor="middle" fill="white"
-                                font-family="Arial, sans-serif" font-weight="900" font-size="16">Z</text>
-                        </svg>
-                        <span>Chat Zalo: 0367.287.102</span>
-                    </a>
+                <div class="sidebar-footer">
+                    <div class="dev-profile">
+                        <div class="dev-avatar">TN</div>
+                        <div class="dev-info">
+                            <div class="dev-label">Phát triển bởi</div>
+                            <div class="dev-name">Tân Nguyễn</div>
+                            <div class="dev-contact">036.728.7102</div>
+                            <div class="dev-quote">"Code một lần - Dùng một đời"</div>
+                            <div class="app-version-badge">Version 3.30 GOLDEN - 10.02.2026</div>
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </aside>
@@ -111,13 +139,7 @@
                     </div>
 
                     <div class="header-right">
-                        <div id="weatherWidget" class="weather-widget">
-                            <span class="weather-icon">Checking...</span>
-                            <div class="weather-info">
-                                <span id="temp">--°C</span>
-                                <span id="location">Đang định vị...</span>
-                            </div>
-                        </div>
+
                         <div class="legend">
                             <div class="export-controls">
                                 <button id="exportWord" title="Xuất Word">🔵 Word</button>
