--- a/index.html
+++ b/index.html
@@ -58,12 +58,8 @@
                     <input type="password" id="ghToken" placeholder="GitHub Token (PAT)..."
                         style="width:100%; margin-bottom:5px; padding:4px; border:1px solid #ccc; border-radius:4px; font-size:0.8rem;">
 
-                    <div style="display:flex; gap:5px; margin-bottom:5px;">
-                        <input type="text" id="ghOwner" placeholder="User/Org"
-                            style="flex:1; padding:4px; border:1px solid #ccc; border-radius:4px; font-size:0.8rem;">
-                        <input type="text" id="ghRepo" placeholder="Repo Name"
-                            style="flex:1; padding:4px; border:1px solid #ccc; border-radius:4px; font-size:0.8rem;">
-                    </div>
+                    <input type="text" id="ghRepoFull" placeholder="Repository (VD: user/repo-name)"
+                        style="width:100%; margin-bottom:5px; padding:4px; border:1px solid #ccc; border-radius:4px; font-size:0.8rem;">
 
                     <input type="text" id="ghPath" value="data.json" placeholder="File path (e.g. data.json)"
                         style="width:100%; margin-bottom:5px; padding:4px; border:1px solid #ccc; border-radius:4px; font-size:0.8rem;">
