--- a/index.html
+++ b/index.html
@@ -37,20 +37,9 @@
             <!-- Sidebar Content (Always Visible for Viewing) -->
             <div class="sidebar-content" id="sidebarMain">
 
-                <!-- Login for Admin Mode -->
-                <div id="loginPanel"
-                    style="padding: 0.5rem; background: #f1f5f9; border-radius: 6px; margin-bottom: 1rem; border: 1px dashed #cbd5e1;">
-                    <div style="display: flex; gap: 5px;">
-                        <input type="password" id="adminPassword" placeholder="Mật khẩu Admin..."
-                            style="flex:1; padding: 4px; border: 1px solid #ccc; border-radius: 4px; font-size: 0.8rem;">
-                        <button id="loginBtn"
-                            style="padding: 4px 8px; cursor: pointer; background: #3b82f6; color: white; border: none; border-radius: 4px; font-size: 0.8rem;">Mở</button>
-                    </div>
-                </div>
-
-                <!-- GitHub Cloud Config (Hidden by default) -->
+                <!-- GitHub Cloud Config (Always Visible now) -->
                 <div id="githubPanel"
-                    style="display:none; padding: 0.5rem; background: #e0f2fe; border-radius: 6px; margin-bottom: 1rem; border: 1px solid #7dd3fc;">
+                    style="display:block; padding: 0.5rem; background: #e0f2fe; border-radius: 6px; margin-bottom: 1rem; border: 1px solid #7dd3fc;">
                     <label
                         style="font-weight:bold; font-size:0.8rem; color:#0369a1; display:block; margin-bottom:5px;">☁️
                         Đồng bộ GitHub (Cloud)</label>
@@ -58,10 +47,10 @@
                     <input type="password" id="ghToken" placeholder="GitHub Token (PAT)..."
                         style="width:100%; margin-bottom:5px; padding:4px; border:1px solid #ccc; border-radius:4px; font-size:0.8rem;">
 
-                    <input type="text" id="ghRepoFull" placeholder="Repository (VD: user/repo-name)"
+                    <input type="text" id="ghRepoFull" placeholder="Nhập User/Repo (VD: loptruong12a9-gif/LICH-TRUC)"
                         style="width:100%; margin-bottom:5px; padding:4px; border:1px solid #ccc; border-radius:4px; font-size:0.8rem;">
 
-                    <input type="text" id="ghPath" value="data.json" placeholder="File path (e.g. data.json)"
+                    <input type="text" id="ghPath" value="data.json" placeholder="Tên file lưu trữ (VD: data.json)"
                         style="width:100%; margin-bottom:5px; padding:4px; border:1px solid #ccc; border-radius:4px; font-size:0.8rem;">
 
                     <div style="display:flex; gap:5px;">
@@ -80,17 +69,17 @@
 
                 <div class="control-group">
                     <label for="startDate">Ngày Bắt Đầu Chu Kỳ</label>
-                    <input type="date" id="startDate" disabled style="background: #e2e8f0; cursor: not-allowed;">
+                    <input type="date" id="startDate">
                     <p class="hint">Chọn ngày bắt đầu (Thứ 2 đầu tiên) của chu kỳ.</p>
                 </div>
 
                 <div class="control-group">
                     <label for="staffInput">Danh Sách Nhân Viên</label>
-                    <textarea id="staffInput" disabled style="background: #e2e8f0; cursor: not-allowed;"
+                    <textarea id="staffInput"
                         placeholder="Nhập tên nhân viên theo cặp...&#10;Ví dụ:&#10;TÂN&#10;LỆ&#10;ĐÔNG&#10;ĐÀI..."></textarea>
 
-                    <!-- Save Button (Hidden by default) -->
-                    <button id="saveStaffBtn" class="primary-btn" style="display: none;">Lưu & Tạo Lịch</button>
+                    <!-- Save Button (Visible by default) -->
+                    <button id="saveStaffBtn" class="primary-btn">Lưu & Tạo Lịch</button>
 
                     <p class="hint">*Nhập đúng thứ tự cặp để thuật toán chạy đúng.</p>
                 </div>
