--- a/index.html
+++ b/index.html
@@ -149,20 +149,7 @@
 
                 <button id="todayBtn" class="secondary-btn">Về Tháng Hiện Tại</button>
 
-                <div class="sidebar-footer">
-                    <div class="dev-profile">
-                        <div class="dev-avatar">TN</div>
-                        <div class="dev-info">
-                            <div class="dev-label">Phát triển bởi</div>
-                            <div class="dev-name">Tân Nguyễn</div>
-                            <div class="dev-contact">036.728.7102</div>
-                            <div class="dev-quote">"Code một lần - Dùng một đời"</div>
-                            <div class="app-version-badge">Version 4.7.0 Stable - 10.02.2026</div>
-
-                        </div>
-                    </div>
-
-                </div>
+                <!-- Sidebar Footer Removed -->
             </div>
         </aside>
 
@@ -213,6 +200,24 @@
                     </table>
                 </div>
             </div>
+
+            <!-- Page Footer Centered -->
+            <footer class="premium-footer">
+                <div class="premium-footer-content">
+                    <div class="premium-brand">
+                        <span class="premium-avatar">TN</span>
+                        <span class="premium-dev-text">Phát triển bởi <strong>Tân Nguyễn</strong></span>
+                    </div>
+                    <div class="premium-divider"></div>
+                    <div class="premium-contact">
+                        <a href="tel:0367287102" class="premium-link"><i class="fa-solid fa-phone"></i> 036.728.7102</a>
+                    </div>
+                    <div class="premium-divider"></div>
+                    <div class="premium-quote">"Code một lần - Dùng một đời"</div>
+                    <div class="premium-divider"></div>
+                    <div class="premium-version-tag">v4.7.0 Stable</div>
+                </div>
+            </footer>
         </main>
     </div>
 
