--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h1 class="hospital-name">Bệnh Viện ĐK Hồng Đức III</h1>
                     <h2 class="department-name">Khoa PT-GMHS</h2>
                     <div class="app-name">LỊCH TRỰC Y CỤ</div>
-                    <span class="version-badge">v5.0.1 ULTIMATE</span>
+                    <span class="version-badge">Phát triển bởi Tân Nguyễn</span>
                 </div>
             </div>
             <!-- Sidebar Content (Always Visible for Viewing) -->
@@ -252,7 +252,7 @@
                     <div class="premium-divider"></div>
                     <div class="premium-quote">"Code một lần - Dùng một đời"</div>
                     <div class="premium-divider"></div>
-                    <div class="premium-version-tag">v5.0.1 ULTIMATE</div>
+                    <div class="premium-version-tag">v5.0.2 ULTIMATE</div>
                 </div>
             </footer>
         </main>
