--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <div class="premium-divider"></div>
                     <div class="premium-quote">"Code một lần - Dùng một đời"</div>
                     <div class="premium-divider"></div>
-                    <div class="premium-version-tag">v5.1.2 ULTIMATE</div>
+                    <div class="premium-version-tag">v6.0.0 LUNAR EDITION</div>
                 </div>
             </footer>
         </main>
